--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robo",
-  "homepage": "https://github.com/KaramveerSidhu/robo-search",
+  "homepage": "https://karamveersidhu.github.io/robo-search",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
